# ecomerce-is-2024

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
backend/: CMakeLists.txt
backend/include/: database.h  static_lib.h
backend/src/: initdatabase.cpp  static_lib.cpp
core/: CMakeLists.txt
core/src/: main.cc
cuda_lib/: CMakeLists.txt
cuda_lib/src/: cuda_lib.cu
docs/: Descrizione Generale.md  Progetto Scelto.md
header_lib/: CMakeLists.txt
header_lib/include/: header_lib.h
migrations/: create-user-db.sql  create.sh  grant.sql  parameters.sql  schema.sql
shared_lib/: CMakeLists.txt
shared_lib/include/: shared_lib.h
shared_lib/src/: shared_lib.cpp
static_lib/: CMakeLists.txt
static_lib/include/: static_lib.h
static_lib/src/: static_lib.cpp
test/: CMakeLists.txt
test/by_doctest/: CMakeLists.txt
test/by_doctest/src/: header_lib_test.cpp  shared_lib_test.cpp
test/by_googletest/: CMakeLists.txt
test/by_googletest/src/: header_lib_test.cpp  shared_lib_test.cpp  static_lib_test.cpp
test/by_nanobench/: CMakeLists.txt
test/by_nanobench/src/: test_bench.cpp
test/include/: test_lib.h
test/src/: static_lib_test.cpp
